# iodm1154r

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: PortsGpio.h  Sensor.h  SensorLuminosidade.h  SensorManager.h  SensorPressao.h  SensorRealTimeClock.h  SensorTemperatura.h  SensorUmidade.h
src/sensor/: SensorLuminosidade.cpp  SensorTemperatura.cpp  SensorUmidade.cpp
tests/: Main_Tests.cpp
